--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,28 +14,35 @@
     ]
   },
   "dependencies": {
-    "@project/contracts": "^1.0.0",
     "@apollo/react-hooks": "^3.1.5",
     "@ethersproject/contracts": "^5.0.1",
     "@ethersproject/providers": "^5.0.4",
+    "@project/contracts": "^1.0.0",
     "@testing-library/dom": "^6.12.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^16.9.19",
+    "@walletconnect/web3-provider": "^1.2.1",
     "apollo-boost": "^0.4.7",
     "apollo-client": "^2.6.8",
     "apollo-utilities": "^1.3.3",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
+    "ethers": "^5.0.8",
+    "fortmatic": "^2.2.1",
     "graphql": "^14.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "web3": "^1.2.11",
+    "web3modal": "^1.9.0"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "license": "UNLICENSED",
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
