--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.5",
+    "@chakra-ui/core": "^1.0.0-rc.2",
+    "@chakra-ui/icon": "^1.0.0-rc.2",
+    "@chakra-ui/theme": "^1.0.0-rc.2",
     "@ethersproject/contracts": "^5.0.1",
     "@ethersproject/providers": "^5.0.4",
     "@project/contracts": "^1.0.0",
@@ -30,12 +33,12 @@
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.8",
-    "fortmatic": "^2.2.1",
     "graphql": "^14.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "web3": "^1.2.11",
     "web3modal": "^1.9.0"
   },
