--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-app:build": "yarn workspace @project/react-app build",
     "react-app:eject": "yarn workspace @project/react-app eject",
     "react-app:start": "yarn workspace @project/react-app start",
-    "react-app:test": "yarn workspace @project/react-app test"
+    "react-app:test": "yarn workspace @project/react-app test",
+    "react-app:lint": "yarn workspace @project/react-app lint"
   },
   "workspaces": {
     "nohoist": [
