--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-app:eject": "yarn workspace @project/react-app eject",
     "react-app:start": "yarn workspace @project/react-app start",
     "react-app:test": "yarn workspace @project/react-app test",
-    "lint": "eslint --ignore-path .gitignore \"./packages/**/*.{ts,tsx,js,jsx}\" --cache",
+    "lint": "eslint --ignore-path .gitignore \"./packages/**/*.{ts,tsx,js,jsx}\" --fix",
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,tsx,js,jsx,json,yml,yaml,md}\""
   },
   "husky": {
@@ -48,7 +48,7 @@
   },
   "license": "UNLICENSED",
   "lint-staged": {
-    "*.{js,jsx}": "eslint --cache --fix",
+    "*.{js,jsx}": "eslint --fix",
     "*.{ts,tsx,js,jsx,json,yml,yaml,md}": "prettier --write"
   }
 }
