--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -50,6 +50,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "lint": "eslint \"./src/**/*.{js,jsx}\" --fix"
   }
 }
