--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -33,7 +33,8 @@
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.8",
-    "graphql": "^14.6.0",
+    "graphql": "^15.3.0",
+    "graphql-request": "^3.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.2.0",
