--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -47,7 +47,7 @@
   },
   "license": "UNLICENSED",
   "scripts": {
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
