--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -34,6 +34,7 @@
     "ethers": "^5.0.8",
     "graphql": "^15.3.0",
     "graphql-request": "^3.0.0",
+    "query-string": "^6.13.2",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-router-dom": "^5.2.0",
