--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -32,6 +32,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.8",
+    "fast-memoize": "^2.5.2",
     "graphql": "^15.3.0",
     "graphql-request": "^3.0.0",
     "query-string": "^6.13.2",
