--- a/packages/subgraph/subgraph.template.yaml
+++ b/packages/subgraph/subgraph.template.yaml
@@ -10,7 +10,7 @@ dataSources:
     network: {{network}}
     source:
       abi: Mediator
-      address: '{{address}}'
+      address: '{{mediator}}'
       # prettier-ignore
       startBlock: {{startBlock}}
     mapping:
@@ -30,4 +30,28 @@ dataSources:
         - event: NewTokenRegistered(indexed address,indexed address)
           handler: handleNewToken
       file: ./src/mappings/bridge.ts
+      language: wasm/assemblyscript
+  - kind: ethereum/contract
+    name: AMB
+    # prettier-ignore
+    network: {{network}}
+    source:
+      abi: AMB
+      address: '{{amb}}'
+      # prettier-ignore
+      startBlock: {{startBlock}}
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.4
+      abis:
+        - name: AMB
+          file: ./src/abis/amb.json
+      entities:
+        - UserRequest
+      eventHandlers:
+        - event: UserRequestForSignature(indexed bytes32,bytes)
+          handler: handleUserRequestForSignature
+        - event: UserRequestForAffirmation(indexed bytes32,bytes)
+          handler: handleUserRequestForAffirmation
+      file: ./src/mappings/amb.ts
       language: wasm/assemblyscript
