updated readme and package.json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "subgraph:auth": "yarn workspace @project/subgraph auth",
     "subgraph:codegen": "yarn workspace @project/subgraph codegen",
     "subgraph:build": "yarn workspace @project/subgraph build",
-    "subgraph:deploy": "yarn workspace @project/subgraph deploy",
+    "subgraph:prepare-kovan": "yarn workspace @project/subgraph prepare-kovan",
+    "subgraph:deploy-kovan": "yarn workspace @project/subgraph deploy-kovan",
+    "subgraph:prepare-sokol": "yarn workspace @project/subgraph prepare-sokol",
+    "subgraph:deploy-sokol": "yarn workspace @project/subgraph deploy-sokol",
+    "subgraph:prepare-xdai": "yarn workspace @project/subgraph prepare-xdai",
+    "subgraph:deploy-xdai": "yarn workspace @project/subgraph deploy-xdai",
+    "subgraph:prepare-mainnet": "yarn workspace @project/subgraph prepare-mainnet",
+    "subgraph:deploy-mainnet": "yarn workspace @project/subgraph deploy-mainnet",
     "react-app:build": "yarn workspace @project/react-app build",
     "react-app:eject": "yarn workspace @project/react-app eject",
     "react-app:start": "yarn workspace @project/react-app start",
