renamed to omnibridge

--- a/packages/react-app/public/manifest.json
+++ b/packages/react-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Multi Token Bridge",
-  "name": "Multi Token Bridge",
+  "short_name": "OmniBridge",
+  "name": "OmniBridge",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
