--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,15 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@master
+
       - name: Install Dependencies
         run: yarn
+
       - name: Build
         run: yarn react-app:build
+        env:
+          REACT_APP_INFURA_ID: ${{ secrets.INFURA_ID }}
+
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
