--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -24,7 +24,9 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/react": "^16.9.19",
+    "@uniswap/token-lists": "^1.0.0-beta.17",
     "@walletconnect/web3-provider": "^1.2.2",
+    "ajv": "^6.12.6",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.8",
