--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -14,9 +14,11 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/core": "^1.0.0-rc.2",
-    "@chakra-ui/icon": "^1.0.0-rc.2",
-    "@chakra-ui/theme": "^1.0.0-rc.2",
+    "@chakra-ui/icon": "^1.0.1",
+    "@chakra-ui/react": "^1.0.2",
+    "@chakra-ui/theme": "^1.0.2",
+    "@emotion/react": "^11.1.1",
+    "@emotion/styled": "^11.0.0",
     "@ethersproject/contracts": "^5.0.1",
     "@ethersproject/providers": "^5.0.4",
     "@testing-library/dom": "^6.12.2",
@@ -31,6 +33,7 @@
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.8",
     "fast-memoize": "^2.5.2",
+    "framer-motion": "^2.9.5",
     "graphql": "^15.3.0",
     "graphql-request": "^3.0.0",
     "query-string": "^6.13.2",
