add mainnet-bsc bridge subgraph

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "subgraph:deploy-xdai-bsc": "yarn workspace @omnibridge/subgraph deploy-xdai-bsc",
     "subgraph:prepare-bsc-xdai": "yarn workspace @omnibridge/subgraph prepare-bsc-xdai",
     "subgraph:deploy-bsc-xdai": "yarn workspace @omnibridge/subgraph deploy-bsc-xdai",
+    "subgraph:prepare-mainnet-bsc": "yarn workspace @omnibridge/subgraph prepare-mainnet-bsc",
+    "subgraph:deploy-mainnet-bsc": "yarn workspace @omnibridge/subgraph deploy-mainnet-bsc",
+    "subgraph:prepare-bsc-mainnet": "yarn workspace @omnibridge/subgraph prepare-bsc-mainnet",
+    "subgraph:deploy-bsc-mainnet": "yarn workspace @omnibridge/subgraph deploy-bsc-mainnet",
     "react-app:build": "yarn workspace @omnibridge/react-app build",
     "react-app:eject": "yarn workspace @omnibridge/react-app eject",
     "react-app:start": "yarn workspace @omnibridge/react-app start",
