both sides bridging - subgraph & tokenList

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@project/react-app",
+  "name": "@omnibridge/react-app",
   "version": "1.0.0",
   "browserslist": {
     "production": [
