--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,7 @@ jobs:
         run: yarn react-app:build
         env:
           REACT_APP_INFURA_ID: ${{ secrets.INFURA_ID }}
+          REACT_APP_NETWORK: sokol
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
