--- a/.github/workflows/xdai.yml
+++ b/.github/workflows/xdai.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: deploy --only hosting --project xdai
+          args: deploy --only hosting --project staging
         env:
           CI: true
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
