--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
     "xdai": "xdai-omnibridge",
-    "sokol": "sokol-omnibridge"
+    "sokol": "sokol-omnibridge",
+    "staging": "omnibridge-staging"
   }
 }
