--- a/.github/workflows/xdai.yml
+++ b/.github/workflows/xdai.yml
@@ -34,7 +34,7 @@ jobs:
           CI: true
           REACT_APP_INFURA_ID: ${{ secrets.INFURA_ID }}
           REACT_APP_HOME_NETWORK: xdai
-          REACT_APP_DEBUG_LOGS: false
+          REACT_APP_DEBUG_LOGS: true
           REACT_APP_TITLE: OmniBridge - %c
           REACT_APP_DESCRIPTION: The OmniBridge multi-token extension for the Arbitrary Message Bridge between Ethereum and the xDai chain is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to the xDai chain.
 
