--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -34,6 +34,7 @@ jobs:
           CI: true
           REACT_APP_INFURA_ID: ${{ secrets.PERSONAL_INFURA_ID }}
           REACT_APP_HOME_NETWORK: sokol
+          REACT_APP_ENABLE_REVERSED_BRIDGE: true
           REACT_APP_HOME_GAS_PRICE_FALLBACK_GWEI: 5
           REACT_APP_FOREIGN_GAS_PRICE_FALLBACK_GWEI: 5
           REACT_APP_DEBUG_LOGS: true
