--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -35,11 +35,13 @@ jobs:
           REACT_APP_INFURA_ID: ${{ secrets.PERSONAL_INFURA_ID }}
           REACT_APP_HOME_NETWORK: sokol
           REACT_APP_ENABLE_REVERSED_BRIDGE: true
-          REACT_APP_HOME_GAS_PRICE_FALLBACK_GWEI: 5
-          REACT_APP_FOREIGN_GAS_PRICE_FALLBACK_GWEI: 5
           REACT_APP_DEBUG_LOGS: true
           REACT_APP_TITLE: OmniBridge - %c
-          REACT_APP_DESCRIPTION: The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.
+          REACT_APP_DESCRIPTION: 'The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.'
+          REACT_APP_HOME_GAS_PRICE_FALLBACK_GWEI: 5
+          REACT_APP_FOREIGN_GAS_PRICE_FALLBACK_GWEI: 5
+          REACT_APP_ETH_PRICE_API_URL: 'https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD'
+          REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 15000
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
