fixed subgraph & dapp with custom mediator overrides

--- a/package.json
+++ b/package.json
@@ -57,6 +57,6 @@
   "license": "UNLICENSED",
   "lint-staged": {
     "*.{js,jsx}": "eslint --fix",
-    "*.{ts,tsx,js,jsx,json,yml,yaml,md}": "prettier --write"
+    "*.{ts,tsx,js,jsx,json,md}": "prettier --write"
   }
 }
