--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -35,6 +35,7 @@
     "fast-memoize": "^2.5.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^2.9.5",
+    "gas-price-oracle": "^0.2.2",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
     "query-string": "^6.13.7",
