--- a/.firebaserc
+++ b/.firebaserc
@@ -2,6 +2,7 @@
   "projects": {
     "xdai": "xdai-omnibridge",
     "sokol": "sokol-omnibridge",
-    "staging": "omnibridge-staging"
+    "staging": "omnibridge-staging",
+    "merge": "koal-personal"
   }
 }
