--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -43,6 +43,7 @@
     "react-dom": "16.12.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "rxjs": "^6.6.3",
     "web3": "^1.3.1",
     "web3modal": "^1.9.2"
   },
