--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,6 @@
 {
   "projects": {
     "xdai": "xdai-omnibridge",
-    "sokol": "sokol-omnibridge",
-    "staging": "omnibridge-staging"
+    "sokol": "sokol-omnibridge"
   }
 }
