--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-app:start": "yarn workspace @omnibridge/react-app start",
     "react-app:test": "yarn workspace @omnibridge/react-app test",
     "react-app:lint": "yarn workspace @omnibridge/react-app lint",
-    "lint": "eslint --ignore-path .gitignore \"./packages/**/*.{ts,tsx,js,jsx}\" --fix",
+    "lint": "eslint --ignore-path .gitignore \"./packages/**/*.{ts,tsx,js,jsx}\"",
     "format": "prettier --ignore-path .gitignore --write \"{*,**/*}.{ts,tsx,js,jsx,json,md}\""
   },
   "husky": {
