--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -56,6 +56,6 @@
     "eject": "react-scripts eject",
     "start": "react-scripts start",
     "test": "react-scripts test",
-    "lint": "eslint \"./src/**/*.{js,jsx}\" --fix"
+    "lint": "eslint \"./src/**/*.{js,jsx}\""
   }
 }
