integrating bsc-xdai

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "subgraph:deploy-xdai": "yarn workspace @omnibridge/subgraph deploy-xdai",
     "subgraph:prepare-mainnet": "yarn workspace @omnibridge/subgraph prepare-mainnet",
     "subgraph:deploy-mainnet": "yarn workspace @omnibridge/subgraph deploy-mainnet",
+    "subgraph:prepare-xdai-bsc": "yarn workspace @omnibridge/subgraph prepare-xdai-bsc",
+    "subgraph:deploy-xdai-bsc": "yarn workspace @omnibridge/subgraph deploy-xdai-bsc",
+    "subgraph:prepare-bsc-xdai": "yarn workspace @omnibridge/subgraph prepare-bsc-xdai",
+    "subgraph:deploy-bsc-xdai": "yarn workspace @omnibridge/subgraph deploy-bsc-xdai",
     "react-app:build": "yarn workspace @omnibridge/react-app build",
     "react-app:eject": "yarn workspace @omnibridge/react-app eject",
     "react-app:start": "yarn workspace @omnibridge/react-app start",
