--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -29,6 +29,7 @@
     "@uniswap/token-lists": "^1.0.0-beta.17",
     "@walletconnect/web3-provider": "^1.3.6",
     "ajv": "^6.12.6",
+    "copy-to-clipboard": "^3.3.1",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.31",
