--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -45,7 +45,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "rxjs": "^6.6.3",
-    "web3": "^1.3.4",
+    "web3": "1.3.3",
     "web3modal": "^1.9.3"
   },
   "eslintConfig": {
