--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -32,26 +32,22 @@ jobs:
         run: yarn react-app:build
         env:
           CI: true
-          REACT_APP_HOME_CHAIN_ID: 77
-          REACT_APP_FOREIGN_CHAIN_ID: 42
-          REACT_APP_ENABLE_REVERSED_BRIDGE: true
-          REACT_APP_DEBUG_LOGS: true
-          REACT_APP_TITLE: OmniBridge - %c
-          REACT_APP_DESCRIPTION: 'The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.'
+          REACT_APP_DEFAULT_BRIDGE_DIRECTION: kovan-sokol
+          REACT_APP_ENABLE_SOKOL_BRIDGE: true
+          REACT_APP_INFURA_ID: ${{ secrets.PERSONAL_INFURA_ID }}
           REACT_APP_GAS_PRICE_FALLBACK_GWEI: 5
+          REACT_APP_GAS_PRICE_SUPPLIER_URL: https://gasprice.poa.network/
+          REACT_APP_GAS_PRICE_SPEED_TYPE: standard
+          REACT_APP_GAS_PRICE_UPDATE_INTERVAL: 15000
           REACT_APP_ETH_PRICE_API_URL: 'https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD'
           REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 15000
-          REACT_APP_FOREIGN_MEDIATOR_ADDRESS: '0xA960d095470f7509955d5402e36d9DB984B5C8E2'
-          REACT_APP_HOME_MEDIATOR_ADDRESS: '0x40CdfF886715A4012fAD0219D15C98bB149AeF0e'
-          REACT_APP_FOREIGN_AMB_ADDRESS: '0xFe446bEF1DbF7AFE24E81e05BC8B271C1BA9a560'
-          REACT_APP_HOME_AMB_ADDRESS: '0xFe446bEF1DbF7AFE24E81e05BC8B271C1BA9a560'
-          REACT_APP_FOREIGN_GRAPH_NAME: 'dan13ram/kovan-omnibridge'
-          REACT_APP_HOME_GRAPH_NAME: 'dan13ram/sokol-omnibridge'
-          REACT_APP_HOME_RPC_URL: 'https://sokol.poa.network'
-          REACT_APP_HOME_EXPLORER_PREFIX: 'https://blockscout.com/poa/sokol'
-          REACT_APP_AMB_LIVE_MONITOR_PREFIX: 'https://alm-test-amb.herokuapp.com'
-          REACT_APP_FOREIGN_RPC_URL: 'https://kovan.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }}'
-          REACT_APP_FOREIGN_EXPLORER_PREFIX: 'https://blockscout.com/eth/kovan'
+          REACT_APP_TITLE: OmniBridge - %c
+          REACT_APP_DESCRIPTION: 'The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.'
+          REACT_APP_UI_STATUS_UPDATE_INTERVAL: 1000
+          REACT_APP_DEBUG_LOGS: true
+          REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: 60000
+          REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: 10
+
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
