--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -39,6 +39,7 @@
     "gas-price-oracle": "^0.2.2",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
+    "history": "^5.0.0",
     "query-string": "^6.13.7",
     "react": "16.12.0",
     "react-dom": "16.12.0",
