--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -31,6 +31,7 @@
     "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
+    "cross-fetch": "^3.1.4",
     "eslint": "^6.8.0",
     "eslint-plugin-flowtype": "^4.6.0",
     "ethers": "^5.0.31",
