--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -42,7 +42,7 @@ jobs:
           REACT_APP_ETH_PRICE_API_URL: 'https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD'
           REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 15000
           REACT_APP_TITLE: OmniBridge - %c
-          REACT_APP_DESCRIPTION: 'The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.'
+          REACT_APP_DESCRIPTION: 'The OmniBridge multi-token extension for the Arbitrary Message Bridge is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain.'
           REACT_APP_UI_STATUS_UPDATE_INTERVAL: 1000
           REACT_APP_DEBUG_LOGS: false
           REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: 60000
