--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -37,12 +37,12 @@ jobs:
           REACT_APP_INFURA_ID: ${{ secrets.PERSONAL_INFURA_ID }}
           REACT_APP_GAS_PRICE_FALLBACK_GWEI: 5
           REACT_APP_GAS_PRICE_SUPPLIER_URL: https://gasprice.poa.network/
-          REACT_APP_GAS_PRICE_SPEED_TYPE: standard
-          REACT_APP_GAS_PRICE_UPDATE_INTERVAL: 15000
+          REACT_APP_GAS_PRICE_SPEED_TYPE: fast
+          REACT_APP_GAS_PRICE_UPDATE_INTERVAL: 60000
           REACT_APP_ETH_PRICE_API_URL: 'https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD'
-          REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 15000
+          REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 60000
           REACT_APP_TITLE: OmniBridge - %c
-          REACT_APP_DESCRIPTION: 'The Sokol OmniBridge multi-token extension for the Arbitrary Message Bridge between Kovan Testnet and the POA Sokol Testnet is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the POA Sokol Testnet.'
+          REACT_APP_DESCRIPTION: 'The OmniBridge multi-token extension is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain.'
           REACT_APP_UI_STATUS_UPDATE_INTERVAL: 5000
           REACT_APP_DEBUG_LOGS: true
           REACT_APP_GRAPH_HEALTH_UPDATE_INTERVAL: 60000
