--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -15,32 +15,31 @@
   },
   "dependencies": {
     "@chakra-ui/icon": "^1.1.9",
-    "@chakra-ui/react": "^1.6.1",
-    "@chakra-ui/theme": "^1.8.5",
+    "@chakra-ui/react": "^1.6.4",
+    "@chakra-ui/theme": "^1.9.1",
     "@emotion/react": "^11.4.0",
-    "@ethersproject/contracts": "^5.1.1",
-    "@ethersproject/providers": "^5.1.2",
-    "@gnosis.pm/safe-apps-web3modal": "^0.3.0",
+    "@emotion/styled": "^11.3.0",
+    "@gnosis.pm/safe-apps-web3modal": "^0.5.0",
     "@uniswap/token-lists": "^1.0.0-beta.21",
     "@walletconnect/web3-provider": "^1.4.1",
     "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
-    "ethers": "^5.1.4",
+    "ethers": "^5.3.1",
     "fast-memoize": "^2.5.2",
     "focus-visible": "^5.2.0",
+    "framer-motion": "^4.1.17",
     "gas-price-oracle": "^0.2.2",
     "graphql-request": "^3.4.0",
     "query-string": "^7.0.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "web3": "1.3.5"
+    "react-scripts": "4.0.3",
+    "web3modal": "^1.9.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-plugin-flowtype": "^4.6.0"
+    "eslint": "^7.29.0"
   },
   "license": "UNLICENSED",
   "scripts": {
