--- a/packages/react-app/public/manifest.json
+++ b/packages/react-app/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "OmniBridge",
   "name": "OmniBridge",
-  "description": "The OmniBridge multi-token extension for the Arbitrary Message Bridge is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain.",
+  "description": "The OmniBridge is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain.",
   "iconPath": "android-chrome-512x512.png",
   "providedBy": { "name": "xDai Chain", "url": "https://xdaichain.com" },
   "icons": [
