--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -2,8 +2,8 @@
   "name": "@omnibridge/subgraph",
   "version": "1.0.0",
   "dependencies": {
-    "@graphprotocol/graph-cli": "0.20.0",
-    "@graphprotocol/graph-ts": "0.20.0"
+    "@graphprotocol/graph-cli": "^0.20.1",
+    "@graphprotocol/graph-ts": "^0.20.0"
   },
   "license": "MIT",
   "scripts": {
