updated prettier config

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,13 @@
   "singleQuote": true,
   "trailingComma": "all",
   "tabWidth": 2,
-  "arrowParens": "avoid"
+  "arrowParens": "avoid",
+  "overrides": [
+    {
+      "files": "overrides.js",
+      "options": {
+        "printWidth": 90
+      }
+    }
+  ]
 }
