--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -14,6 +14,7 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/icon": "^1.1.9",
     "@chakra-ui/react": "^1.6.4",
     "@chakra-ui/theme": "^1.9.1",
