--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,18 +1,15 @@
-name: Build and Deploy Production
-# on:
-#   push:
-#     branches:
-#       - master
+name: Publish to gh-pages
+
+on:
+  push:
+    branches:
+      - master
 
 jobs:
-  deploy:
-    name: Build & Deploy Production
+  publish:
+    name: Build and Publish to gh-pages
     runs-on: ubuntu-latest
     steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.4.0
-        with:
-          access_token: ${{ github.token }}
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
@@ -31,17 +28,16 @@ jobs:
       - name: Build
         run: yarn dapp:build
         env:
-          CI: true
           REACT_APP_DEFAULT_BRIDGE_DIRECTION: eth-xdai
           REACT_APP_ENABLED_BRIDGES: 'eth-xdai bsc-xdai eth-bsc'
-          REACT_APP_INFURA_ID: ${{ secrets.INFURA_ID }}
+          REACT_APP_INFURA_ID: ''
           REACT_APP_GAS_PRICE_FALLBACK_GWEI: 50
           REACT_APP_GAS_PRICE_SUPPLIER_URL: https://gasprice.poa.network/
           REACT_APP_GAS_PRICE_SPEED_TYPE: fast
           REACT_APP_GAS_PRICE_UPDATE_INTERVAL: 60000
           REACT_APP_ETH_PRICE_API_URL: 'https://api.coingecko.com/api/v3/simple/price?ids=ethereum&vs_currencies=USD'
           REACT_APP_ETH_PRICE_UPDATE_INTERVAL: 60000
-          REACT_APP_TITLE: OmniBridge - %c
+          REACT_APP_TITLE: Mask Bridge - %c
           REACT_APP_DESCRIPTION: 'The OmniBridge multi-token extension is the simplest way to transfer ANY ERC20/ERC677/ERC827 token to and from the xDai chain.'
           REACT_APP_UI_STATUS_UPDATE_INTERVAL: 5000
           REACT_APP_DEBUG_LOGS: false
@@ -49,14 +45,22 @@ jobs:
           REACT_APP_GRAPH_HEALTH_THRESHOLD_BLOCKS: 10
           REACT_APP_XDAI_RPC_URL: https://rpc.xdaichain.com https://dai.poa.network
           REACT_APP_SOKOL_RPC_URL: https://sokol.poa.network
-          REACT_APP_MAINNET_RPC_URL: https://mainnet.infura.io/v3/${{ secrets.INFURA_ID }} https://mainnet-nethermind.blockscout.com/
-          REACT_APP_KOVAN_RPC_URL: https://kovan.infura.io/v3/${{ secrets.INFURA_ID }} https://kovan.poa.network/
+          REACT_APP_MAINNET_RPC_URL: https://mainnet-nethermind.blockscout.com/
+          REACT_APP_KOVAN_RPC_URL: https://kovan.poa.network/
           REACT_APP_BSC_RPC_URL: https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/
 
-      - name: Deploy to Firebase
-        uses: w9jds/firebase-action@master
+      - name: Checkout gh-pages Branch
+        uses: actions/checkout@v2
         with:
-          args: deploy --only hosting --project xdai
-        env:
-          CI: true
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          ref: gh-pages
+          path: ./gh-pages
+
+      - name: Copy build files
+        run: |
+          cp -r packages/dapp/build/* ./gh-pages
+          cd ./gh-pages
+          git add .
+          git config --local user.email "bot@mask.io"
+          git config --local user.name "commit bot"
+          git commit -m "`date '+Release %Y-%m-%d %H:%M'`"
+          git push origin HEAD:gh-pages
