--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -13,6 +13,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "https://dimensiondev.github.io/maskbridge/",
   "dependencies": {
     "@chakra-ui/icons": "^1.0.13",
     "@chakra-ui/icon": "^1.1.9",
