--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -14,32 +14,32 @@
     ]
   },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.13",
-    "@chakra-ui/react": "^1.6.4",
-    "@chakra-ui/theme": "^1.9.1",
-    "@emotion/react": "^11.4.0",
+    "@chakra-ui/icons": "^1.0.15",
+    "@chakra-ui/react": "^1.6.6",
+    "@chakra-ui/theme": "^1.10.0",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@gnosis.pm/safe-apps-web3modal": "^0.6.0",
     "@uniswap/token-lists": "^1.0.0-beta.21",
-    "@walletconnect/web3-provider": "^1.4.1",
+    "@walletconnect/web3-provider": "^1.5.3",
     "ajv": "^6.12.6",
     "axios": "^0.21.1",
     "copy-to-clipboard": "^3.3.1",
-    "ethers": "^5.3.1",
+    "ethers": "^5.4.4",
     "fast-memoize": "^2.5.2",
     "focus-visible": "^5.2.0",
     "framer-motion": "^4.1.17",
     "gas-price-oracle": "^0.3.3",
-    "graphql-request": "^3.4.0",
+    "graphql-request": "^3.5.0",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
-    "web3modal": "^1.9.3"
+    "web3modal": "^1.9.4"
   },
   "devDependencies": {
-    "eslint": "^7.29.0"
+    "prettier": "^2.3.2"
   },
   "license": "UNLICENSED",
   "scripts": {
