--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -2,8 +2,8 @@
   "name": "@omnibridge/subgraph",
   "version": "1.0.0",
   "dependencies": {
-    "@graphprotocol/graph-cli": "^0.20.1",
-    "@graphprotocol/graph-ts": "^0.20.0"
+    "@graphprotocol/graph-cli": "^0.21.1",
+    "@graphprotocol/graph-ts": "^0.20.1"
   },
   "license": "MIT",
   "scripts": {
@@ -28,6 +28,7 @@
     "deploy-bsc-mainnet": "graph deploy dan13ram/bsc-to-mainnet-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/"
   },
   "devDependencies": {
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "prettier": "^2.3.2"
   }
 }
