--- a/packages/dapp/package.json
+++ b/packages/dapp/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "walletlink": "^2.1.9",
     "web3modal": "^1.9.4"
   },
   "devDependencies": {
