--- a/.github/workflows/sokol.yml
+++ b/.github/workflows/sokol.yml
@@ -52,6 +52,7 @@ jobs:
           REACT_APP_MAINNET_RPC_URL: https://mainnet.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://mainnet-nethermind.blockscout.com/
           REACT_APP_KOVAN_RPC_URL: https://kovan.infura.io/v3/${{ secrets.PERSONAL_INFURA_ID }} https://kovan.poa.network/
           REACT_APP_BSC_RPC_URL: https://bsc-dataseed.binance.org https://bsc-dataseed1.defibit.io/
+          REACT_APP_COINZILLA_API_KEY: ${{ secrets.COINZILLA_API_KEY }}
 
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
