--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -14,6 +14,8 @@
     "prepare-sokol": "mustache config/sokol.json subgraph.template.yaml > subgraph.yaml",
     "prepare-xdai-bsc": "mustache config/xdai-bsc.json subgraph.template.yaml > subgraph.yaml",
     "prepare-bsc-xdai": "mustache config/bsc-xdai.json subgraph.template.yaml > subgraph.yaml",
+    "prepare-xdai-poa": "mustache config/xdai-poa.json subgraph.template.yaml > subgraph.yaml",
+    "prepare-poa-xdai": "mustache config/poa-xdai.json subgraph.template.yaml > subgraph.yaml",
     "prepare-mainnet-bsc": "mustache config/mainnet-bsc.json subgraph.template.yaml > subgraph.yaml",
     "prepare-bsc-mainnet": "mustache config/bsc-mainnet.json subgraph.template.yaml > subgraph.yaml",
     "codegen": "graph codegen --output-dir src/types/",
@@ -24,6 +26,8 @@
     "deploy-sokol": "graph deploy dan13ram/sokol-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-xdai-bsc": "graph deploy maxaleks/xdai-to-bsc-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-bsc-xdai": "graph deploy maxaleks/bsc-to-xdai-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy-xdai-poa": "graph deploy maxaleks/xdai-to-poa-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
+    "deploy-poa-xdai": "graph deploy maxaleks/poa-to-xdai-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-mainnet-bsc": "graph deploy dan13ram/mainnet-to-bsc-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/",
     "deploy-bsc-mainnet": "graph deploy dan13ram/bsc-to-mainnet-omnibridge --ipfs https://api.thegraph.com/ipfs/ --node https://api.thegraph.com/deploy/"
   },
